# deku

./: docker-compose.yml  esy.json  flake.nix  sandbox.sh
benchmarks/bench_vm/: bench_voting_contract.ml  benchmarks.ml
benchmarks/bench_vm/scripts/: benchmark.sh  clean.sh  graph.sh
esy.lock/: index.json
foo/: dune  fiber_bench_main.ml  main.ml  runner.sh
nix/: deku.nix  overlay.nix  shell.nix
ppx_lambda_vm/: ppx_lambda_vm.ml
src/consensus/: consensus.ml  dune  message.ml  prenode.ml  tendermint.ml  watcher.ml
src/consensus/helpers/: consensus_helpers.ml  dune  log.ml
src/consensus/test/: dune  test.ml  test_watcher.ml
src/lambda_vm/: compiler.ml  dune  interpreter.ml  lambda_vm.mli
src/metrics/: blocks.ml  config.ml  dream_app.ml  dune  metrics.ml  prometheus_app.ml
src/node/: building_blocks.ml  flows.ml  networking.ml  server.ml  snapshots.ml  state.ml  state.mli  tendermint.ml  tendermint.mli  tendermint_data.ml  tendermint_internals.ml  tendermint_internals.mli  tendermint_processes.ml
src/protocol/: block.ml  block.mli  protocol.ml
src/tezos/: deku.ml
src/tezos_interop/: long_lived_js_process.ml  tezos_interop.ml  tezos_js_bridge.js
tests/: test_tezos_interop.ml  test_tezos_rpc.ml
tests/vm/: dune  test_vm.ml  test_voting_contract.ml  vm_test.ml
